# cursor-issues

./: .bazelrc  .gitignore  .npmrc  BUILD.bazel  CONTRIBUTORS.md  MODULE.bazel  README.md  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cursor/rules/: commonjs-compatibility.mdc  git-commit-author.mdc  locked-test-assertions.mdc  no-console-in-tests.mdc  rules-storage.mdc  typescript-pnpm.mdc
chat-history/: cursor_executing_repository_issue_instr.md
docs/: README.md  cli-testing-commonjs.md  math.md
examples/: README.md  advanced_usage.js  basic_usage.js  web_calculator.html
prompts/: execute-on-issues.md
src/: BUILD.bazel  calculator.js  calculator.mjs  calculator.ts  calculatorUI.ts  interactiveMode.ts
src/commands/: BUILD.bazel  divide.mjs  divide.ts  index.mjs  multiply.mjs  multiply.ts  power.ts  subtract.mjs  subtract.ts  sum.mjs  sum.ts
tests/: BUILD.bazel  divide.test.js  divide.test.mjs  divide.test.ts  interactive.integration.test.ts  interactive.test.ts  multiply.test.js  multiply.test.mjs  multiply.test.ts  package.json  power.test.ts  subtract.test.js  subtract.test.mjs  subtract.test.ts  sum.test.js  sum.test.mjs  sum.test.ts
