module(
    name = "cursor_issues",
    version = "0.1.0",
)

bazel_dep(name = "aspect_bazel_lib", version = "1.40.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "rules_nodejs", version = "6.0.2")
bazel_dep(name = "aspect_rules_js", version = "1.38.0")
bazel_dep(name = "aspect_rules_ts", version = "2.1.0")

# Set up the Node.js toolchain
node = use_extension("@rules_nodejs//nodejs:extensions.bzl", "node")
node.toolchain(
    name = "nodejs",
    node_version = "18.12.1",
)
use_repo(node, "nodejs_toolchains")

register_toolchains("@nodejs_toolchains//:all")