load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library")

# Define the calculator library
js_library(
    name = "calculator_lib",
    srcs = [
        "calculator.mjs",
        "//src/commands:sources",
    ],
    visibility = ["//visibility:public"],
)

# Define a runnable target for the calculator
js_binary(
    name = "calculator",
    data = [":calculator_lib"],
    entry_point = "calculator.mjs",
    visibility = ["//visibility:public"],
)