load("@aspect_rules_js//js:defs.bzl", "js_binary", "js_library", "js_test")

# Common test JS sources
js_library(
    name = "test_sources",
    srcs = [
        "divide.test.mjs",
        "multiply.test.mjs",
        "subtract.test.mjs",
        "sum.test.mjs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//src/commands:sources",
    ],
)

# Individual tests as direct Node.js scripts
js_test(
    name = "sum_test",
    data = [
        ":test_sources",
        "//src/commands:sources",
    ],
    entry_point = "sum.test.mjs",
    size = "small",
)

js_test(
    name = "subtract_test",
    data = [
        ":test_sources",
        "//src/commands:sources",
    ],
    entry_point = "subtract.test.mjs",
    size = "small",
)

js_test(
    name = "multiply_test",
    data = [
        ":test_sources",
        "//src/commands:sources",
    ],
    entry_point = "multiply.test.mjs",
    size = "small",
)

js_test(
    name = "divide_test",
    data = [
        ":test_sources",
        "//src/commands:sources",
    ],
    entry_point = "divide.test.mjs",
    size = "small",
)